--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     />
 
     <!-- Bootstrap -->
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,9 +32,16 @@
     />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css" />
+
+    <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-6 bg-primary">a</div>
+        <div class="col-6">b</div>
+      </div>
+    </div>
     How we work Blog Account View plans Humanizing your insurance. Get your life
     insurance coverage easier and faster. We blend our expertise and technology
     to help you find the plan that’s right for you. Ensure you and your loved
