--- a/index.html
+++ b/index.html
@@ -36,86 +36,99 @@
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          <img src="images/logo.svg" alt="Insure logo" />
-        </a>
+    <div class="container-fluid p-0">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="images/logo.svg" alt="Insure logo" />
+          </a>
 
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span>
-            <img src="images/icon-hamburger.svg" alt="Toggle navigation" />
-          </span>
-        </button>
-        <div
-          class="collapse navbar-collapse justify-content-end"
-          id="navbarNav"
-        >
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link text-uppercase text-secondary" href="#"
-                >How we work</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-uppercase text-secondary" href="#"
-                >Blog</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-uppercase text-secondary" href="#"
-                >Account</a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link text-uppercase text-secondary" href="#"
-                >View plans</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <div class="row position-relative">
-      <img
-        class="d-lg-none img-fluid"
-        src="images/image-intro-mobile.jpg"
-        alt=""
-      />
-      <img
-        class="d-none d-lg-block alo"
-        src="images/image-intro-desktop.jpg"
-        alt=""
-      />
-    </div>
-
-    <div class="row bg-primary m-0 custom-hero align-items-center">
-      <div class="col-lg-6 text-light">
-        <h1 class="text-center text-lg-start">
-          Humanizing <br />
-          your insurance.
-        </h1>
-        <p class="text-center text-lg-start">
-          Get your life insurance coverage easier and faster. We blend our
-          expertise and technology to help you find the plan that’s right for
-          you. Ensure you and your loved ones are protected.
-        </p>
-
-        <div class="row">
-          <div class="col text-center text-lg-start">
-            <button type="button" class="btn btn-light text-uppercase">
-              View plans
-            </button>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span>
+              <img src="images/icon-hamburger.svg" alt="Toggle navigation" />
+            </span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="navbarNav"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a
+                  class="nav-link text-uppercase text-secondary fw-bold"
+                  href="#"
+                  >How we work</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-uppercase text-secondary fw-bold"
+                  href="#"
+                  >Blog</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-uppercase text-secondary fw-bold"
+                  href="#"
+                  >Account</a
+                >
+              </li>
+              <li class="nav-item">
+                <a
+                  class="nav-link text-uppercase text-secondary fw-bold"
+                  href="#"
+                  >View plans</a
+                >
+              </li>
+            </ul>
           </div>
+        </div>
+      </nav>
+
+      <div class="row">
+        <img
+          class="img.fluid d-lg-none w-100"
+          src="images/image-intro-mobile.jpg"
+          alt=""
+        />
+      </div>
+
+      <div
+        class="row bg-primary m-0 custom-hero align-items-center position-relative justify-content-center"
+      >
+        <div class="col-lg-8 text-light">
+          <h1 class="text-center text-lg-start">
+            Humanizing <br />
+            your insurance.
+          </h1>
+          <p class="text-center text-lg-start">
+            Get your life insurance coverage easier and faster. We blend our
+            expertise and technology to help you find the plan that’s right for
+            you. Ensure you and your loved ones are protected.
+          </p>
+
+          <div class="row">
+            <div class="col text-center text-lg-start">
+              <button type="button" class="btn btn-light text-uppercase">
+                View plans
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="d-none d-lg-block col-lg-4 position-absolute top-0 mt-5 end-0"
+        >
+          <img class="img-fluid" src="images/image-intro-desktop.jpg" alt="" />
         </div>
       </div>
     </div>
