--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="https://img.icons8.com/metro/26/000000/i-lowercase.png"
     />
 
     <title>Insure</title>
@@ -22,116 +22,46 @@
       rel="stylesheet"
     />
 
-    <!-- Bootstrap -->
-
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
-
-    <!-- Custom CSS -->
+    <!-- Compiled CSS -->
 
     <link href="css/style.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="container-fluid p-0">
-      <nav class="navbar navbar-expand-lg">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="images/logo.svg" alt="Insure logo" />
-          </a>
-
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span>
-              <img src="images/icon-hamburger.svg" alt="Toggle navigation" />
-            </span>
-          </button>
-          <div
-            class="collapse navbar-collapse justify-content-end"
-            id="navbarNav"
-          >
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a
-                  class="nav-link text-uppercase text-secondary fw-bold"
-                  href="#"
-                  >How we work</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link text-uppercase text-secondary fw-bold"
-                  href="#"
-                  >Blog</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link text-uppercase text-secondary fw-bold"
-                  href="#"
-                  >Account</a
-                >
-              </li>
-              <li class="nav-item">
-                <a
-                  class="nav-link text-uppercase text-secondary fw-bold"
-                  href="#"
-                  >View plans</a
-                >
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-
-      <div class="row">
-        <img
-          class="img.fluid d-lg-none w-100"
-          src="images/image-intro-mobile.jpg"
-          alt=""
-        />
+    <header class="primary-header">
+      <div>
+        <img src="images/logo.svg" alt="Insure logo" />
       </div>
 
-      <div
-        class="row bg-primary m-0 custom-hero align-items-center position-relative justify-content-center"
-      >
-        <div class="col-lg-8 text-light">
-          <h1 class="text-center text-lg-start">
-            Humanizing <br />
-            your insurance.
-          </h1>
-          <p class="text-center text-lg-start">
-            Get your life insurance coverage easier and faster. We blend our
-            expertise and technology to help you find the plan that’s right for
-            you. Ensure you and your loved ones are protected.
-          </p>
+      <button
+        class="mobile-nav-toggle"
+        aria-controls="primary-navigation"
+        aria-label="Menu"
+        aria-expanded="false"
+      ></button>
 
-          <div class="row">
-            <div class="col text-center text-lg-start">
-              <button type="button" class="btn btn-light text-uppercase">
-                View plans
-              </button>
-            </div>
-          </div>
-        </div>
-
-        <div
-          class="d-none d-lg-block col-lg-4 position-absolute top-0 mt-5 end-0"
+      <nav>
+        <ul
+          id="primary-navigation"
+          class="primary-navigation"
+          data-visible="false"
         >
-          <img class="img-fluid" src="images/image-intro-desktop.jpg" alt="" />
-        </div>
-      </div>
-    </div>
+          <li>
+            <a href="#">How we work</a>
+          </li>
+          <li>
+            <a href="#">Blog</a>
+          </li>
+          <li>
+            <a href="#">Account</a>
+          </li>
+          <li>
+            <a href="#">
+              <button>View plans</button>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
     <!-- How we work Blog Account View plans  Get your life
     insurance coverage easier and faster. We blend our expertise and technology
@@ -146,11 +76,7 @@
     Insure? View plans Reviews Help me FAQ Terms of use Privacy policy Cookies
     Contact Sales Support Live chat Others Careers Press Licenses -->
 
-    <!-- Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-      crossorigin="anonymous"
-    ></script>
+    <!-- JS -->
+    <script src="app/js/script.js"></script>
   </body>
 </html>
