more navbar styles

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <body>
     <header class="primary-header">
       <div>
-        <img src="images/logo.svg" alt="Insure logo" />
+        <a href="#"><img src="images/logo.svg" alt="Insure logo" /></a>
       </div>
 
       <button
