--- a/index.html
+++ b/index.html
@@ -63,10 +63,36 @@
       </nav>
     </header>
 
-    <!-- How we work Blog Account View plans  Get your life
-    insurance coverage easier and faster. We blend our expertise and technology
-    to help you find the plan that’s right for you. Ensure you and your loved
-    ones are protected. View plans We’re different Snappy Process Our
+    <div class="hero">
+      <div class="hero__text">
+        <h1>
+          Humanizing<br />
+          your insurance.
+        </h1>
+        <p>
+          Get your life insurance coverage easier and faster. We blend our
+          expertise and technology to help you find the plan that’s right for
+          you. Ensure you and your loved ones are protected.
+        </p>
+        <button>View plans</button>
+      </div>
+      <div class="hero__illustration">
+        <img
+          src="./images/image-intro-desktop.jpg"
+          alt=""
+          aria-hidden="true"
+          class="hero__illustration-desktop"
+        />
+        <img
+          src="./images/image-intro-mobile.jpg"
+          alt=""
+          aria-hidden="true"
+          class="hero__illustration-mobile"
+        />
+      </div>
+    </div>
+
+    <!-- We’re different Snappy Process Our
     application process can be completed in minutes, not hours. Don’t get stuck
     filling in tedious forms. Affordable Prices We don’t want you worrying about
     high monthly costs. Our prices may be low, but we still offer the best
