--- a/index.html
+++ b/index.html
@@ -63,42 +63,89 @@
       </nav>
     </header>
 
-    <div class="hero">
-      <div class="hero__text">
-        <h1>
-          Humanizing<br />
-          your insurance.
-        </h1>
-        <p>
-          Get your life insurance coverage easier and faster. We blend our
-          expertise and technology to help you find the plan that’s right for
-          you. Ensure you and your loved ones are protected.
-        </p>
-        <button>View plans</button>
-      </div>
-      <div class="hero__illustration">
-        <img
-          src="./images/image-intro-desktop.jpg"
-          alt=""
-          aria-hidden="true"
-          class="hero__illustration-desktop"
-        />
-        <img
-          src="./images/image-intro-mobile.jpg"
-          alt=""
-          aria-hidden="true"
-          class="hero__illustration-mobile"
-        />
-      </div>
-    </div>
+    <main>
+      <section class="hero">
+        <div class="hero__text">
+          <h1>
+            Humanizing<br />
+            your insurance.
+          </h1>
+          <p>
+            Get your life insurance coverage easier and faster. We blend our
+            expertise and technology to help you find the plan that’s right for
+            you. Ensure you and your loved ones are protected.
+          </p>
+          <button>View plans</button>
+        </div>
+        <div class="hero__illustration">
+          <img
+            src="./images/image-intro-desktop.jpg"
+            alt=""
+            aria-hidden="true"
+            class="hero__illustration-desktop"
+          />
+          <img
+            src="./images/image-intro-mobile.jpg"
+            alt=""
+            aria-hidden="true"
+            class="hero__illustration-mobile"
+          />
+        </div>
+      </section>
 
-    <!-- We’re different Snappy Process Our
-    application process can be completed in minutes, not hours. Don’t get stuck
-    filling in tedious forms. Affordable Prices We don’t want you worrying about
-    high monthly costs. Our prices may be low, but we still offer the best
-    coverage possible. People First Our plans aren’t full of conditions and
-    clauses to prevent payouts. We make sure you’re covered when you need it.
-    Find out more about how we work How we work Our company How we work Why
+      <section class="body">
+        <h2>We're different</h2>
+        <div class="body__traits">
+          <ul>
+            <li>
+              <img
+                src="images/icon-snappy-process.svg"
+                alt=""
+                aria-hidden="true"
+              />
+              <h3>Snappy Process</h3>
+              <p>
+                Our application process can be completed in minutes, not hours.
+                Don’t get stuck filling in tedious forms.
+              </p>
+            </li>
+
+            <li>
+              <img
+                src="images/icon-affordable-prices.svg"
+                alt=""
+                aria-hidden="true"
+              />
+              <h3>Affordable Prices</h3>
+              <p>
+                We don’t want you worrying about high monthly costs. Our prices
+                may be low, but we still offer the best coverage possible.
+              </p>
+            </li>
+
+            <li>
+              <img
+                src="images/icon-people-first.svg"
+                alt=""
+                aria-hidden="true"
+              />
+              <h3>People First</h3>
+              <p>
+                Our plans aren’t full of conditions and clauses to prevent
+                payouts. We make sure you’re covered when you need it.
+              </p>
+            </li>
+          </ul>
+        </div>
+        <div class="body__cta">
+          <h2>Find out more about how we work</h2>
+
+          <button>How we work</button>
+        </div>
+      </section>
+    </main>
+    <!--    
+    Our company How we work Why
     Insure? View plans Reviews Help me FAQ Terms of use Privacy policy Cookies
     Contact Sales Support Live chat Others Careers Press Licenses -->
 
