--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
     <!-- Compiled CSS -->
 
     <link href="css/style.css" rel="stylesheet" />
+
+    <!-- Fontawesome Kit -->
+
+    <script
+      src="https://kit.fontawesome.com/62d4c08afa.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header class="primary-header">
@@ -76,6 +83,13 @@
             you. Ensure you and your loved ones are protected.
           </p>
           <button>View plans</button>
+
+          <img
+            src="images/bg-pattern-intro-right-mobile.svg"
+            alt=""
+            aria-hidden="true"
+            id="mobile-bg-right"
+          />
         </div>
         <div class="hero__illustration">
           <img
@@ -91,6 +105,22 @@
             class="hero__illustration-mobile"
           />
         </div>
+      </section>
+
+      <section class="decorative-bg-images" aria-hidden="true">
+        <img
+          src="images/bg-pattern-intro-left-desktop.svg"
+          alt=""
+          aria-hidden="true"
+          id="desktop-left"
+        />
+
+        <img
+          src="images/bg-pattern-intro-right-desktop.svg"
+          alt=""
+          aria-hidden="true"
+          id="desktop-right"
+        />
       </section>
 
       <section class="body">
@@ -144,10 +174,64 @@
         </div>
       </section>
     </main>
-    <!--    
-    Our company How we work Why
-    Insure? View plans Reviews Help me FAQ Terms of use Privacy policy Cookies
-    Contact Sales Support Live chat Others Careers Press Licenses -->
+
+    <footer class="footer">
+      <section class="footer__icons">
+        <div>
+          <a href="#">
+            <img src="images/logo.svg" alt="Insure logo" />
+          </a>
+        </div>
+
+        <div class="social">
+          <a href="#"><i class="fa-brands fa-facebook-square fa-2xl"></i></a
+          ><a href=""><i class="fa-brands fa-twitter fa-2xl"></i></a
+          ><a href=""><i class="fa-brands fa-pinterest fa-2xl"></i></a
+          ><a href=""><i class="fa-brands fa-instagram fa-2xl"></i></a>
+        </div>
+      </section>
+
+      <hr />
+      <section class="footer__links">
+        <section>
+          <h4>Our company</h4>
+          <ul>
+            <li>How we work</li>
+            <li>Why insure?</li>
+            <li>View plans</li>
+            <li>Reviews</li>
+          </ul>
+        </section>
+
+        <section>
+          <h4>Help me</h4>
+          <ul>
+            <li>Faq</li>
+            <li>Terms of use</li>
+            <li>Privary policy</li>
+            <li>Cookies</li>
+          </ul>
+        </section>
+
+        <section>
+          <h4>Contact</h4>
+          <ul>
+            <li>Sales</li>
+            <li>Support</li>
+            <li>Live chat</li>
+          </ul>
+        </section>
+
+        <section>
+          <h4>Others</h4>
+          <ul>
+            <li>Careers</li>
+            <li>Press</li>
+            <li>Licenses</li>
+          </ul>
+        </section>
+      </section>
+    </footer>
 
     <!-- JS -->
     <script src="app/js/script.js"></script>
